# pycpphello

./: .gitignore  CMakeLists.txt  README.md  build-nix.sh  main.py  setup_helper.sh
cmake/: python.cmake
pycpphello/dummy/: CMakeLists.txt
pycpphello/dummy/include/dummy/: Dummy.h
pycpphello/dummy/python/: CMakeLists.txt  dummy.i
pycpphello/dummy/src/: Dummy.cpp
pycpphello/foo/: Foo.py
